更新了身份标签的识别

--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -57,7 +57,8 @@
         <view class="my-info-mail-info">
           <view class="my-info-mail-info-top">
             <text wx:if="{{user.name}}" class="my-info-mail-info-top-txt">用户名 {{user.name}}</text>
-            <image style="width: 40rpx;" src="/assets/images/my/youke.png" class="my-info-mail-info-top-jb"></image>
+            <image style="width:40rpx" wx:if="{{user.role === '0'}}" src="/assets/images/my/admin.png" class="my-info-mail-info-top-jb"></image>
+            <image style="width:40rpx" wx:elif="{{user.role !== '0'}}" src="/assets/images/my/youke.png" class="my-info-mail-info-top-jb"></image>
           </view>
           <view class="my-info-mail-info-bottom">用户Id {{user.id}}</view>
         </view>
