--- a/pages/detail/forumDetail/detail.wxss
+++ b/pages/detail/forumDetail/detail.wxss
@@ -74,7 +74,24 @@
   border-radius: 50%; /* 圆形效果 */
   margin-right: 10px; /* 与用户名之间的间距 */
 }
+.comment-actions {
+  margin-top: 5px;
+  font-size: 12px;
+  color: #888;
+  display: flex;
+  gap: 10px; /* 设置操作按钮的间距 */
+}
 
+.action-reply,
+.action-delete {
+  cursor: pointer;
+  color: #85807f; /* 蓝色文字 */
+}
+
+.action-reply:hover,
+.action-delete:hover {
+  color: #0056b3; /* 悬停时深蓝色 */
+}
 .publish-btn {
   background-color: #ff0000;
   color: #fff;
