--- a/pages/exam/admin/question/index.wxss
+++ b/pages/exam/admin/question/index.wxss
@@ -143,3 +143,8 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+.question-mark {
+  font-size: 14px;
+  color: #666;
+  margin-left: 10px;
+}
